// Copyright 2025 Author(s) of MCP Any
// SPDX-License-Identifier: Apache-2.0

edition = "2023";

package mcpany.config.v1;

import "proto/bus/bus.proto";
import "proto/config/v1/auth.proto";
import "proto/config/v1/call.proto";
import "proto/config/v1/webhook.proto";

option go_package = "github.com/mcpany/core/proto/config/v1";
option java_outer_classname = "MiddlewareProto";

message Middleware {
    string name = 1;
    oneof middleware_config {
        RateLimitConfig rate_limit = 2;
        CacheConfig cache = 3;
        AuthenticationConfig authentication = 4;
        AuditConfig audit = 5;
        CallPolicy call_policy = 6;
    }
}

// Configuration for rate limiting requests to the upstream service.
message RateLimitConfig {
  // Whether rate limiting is enabled.
  bool is_enabled = 1 [json_name = "is_enabled"];
  // The maximum number of requests allowed per second.
  double requests_per_second = 2 [json_name = "requests_per_second"];
  // The number of requests that can be allowed in a short burst.
  int64 burst = 3;

  enum Storage {
    STORAGE_UNSPECIFIED = 0;
    STORAGE_MEMORY = 1;
    STORAGE_REDIS = 2;
  }
  Storage storage = 4;

  // Redis configuration if storage is set to STORAGE_REDIS.
  bus.RedisBus redis = 5;
}

message AuditConfig {
  // Whether audit logging is enabled.
  bool enabled = 1 [json_name = "enabled"];
  // The file path to write audit logs to.
  string output_path = 2 [json_name = "output_path"];
  // Whether to log input arguments (caution: might contain secrets).
  bool log_arguments = 3 [json_name = "log_arguments"];
  // Whether to log output results (caution: might contain sensitive data).
  bool log_results = 4 [json_name = "log_results"];
}

message CallPolicy {
  enum Action {
    ALLOW = 0;
    DENY = 1;
    SAVE_CACHE = 2;
    DELETE_CACHE = 3;
  }
  // Default action if no rules match.
  Action default_action = 1;
  // List of rules to apply. First match wins.
  repeated CallPolicyRule rules = 2;
}

message CallPolicyRule {
  CallPolicy.Action action = 1;
  // Regex to match the call name. Empty means match all.
  string name_regex = 2 [json_name = "name_regex"];
  // Regex to match request arguments (JSON stringified). Empty means match all.
  // This is a simple regex match on the JSON representation of arguments.
  string argument_regex = 3;
  // Regex to match endpoint path or URL.
  string url_regex = 4 [json_name = "url_regex"];
  // Regex to match call ID. Empty means match all.
  string call_id_regex = 5 [json_name = "call_id_regex"];
}

message CallHook {
  string name = 1;
  oneof hook_config {
    WebhookConfig webhook = 2;
    CallPolicy call_policy = 4;
  }
}
